tests/bad/main/args-main.go
package main

func main(i int) {}
